# Studeal

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  smoke_test.py
alembic/: env.py
alembic/versions/: 0001_create_deals_table.py  0002_add_users_watchlists_alerts.py  0003_add_is_pro_to_users.py  0004_add_embedding_to_deals.py  0005_add_embedding_to_watchlist_keywords.py  0006_add_hunt_date_to_deals.py  0007_add_student_eligible_to_deals.py  0008_add_condition_to_deals.py  0009_add_expires_at_to_watchlists.py  0010_add_stripe_fields_to_users.py  0011_add_secondhand_searches_used_to_users.py  0012_add_google_id_to_users.py  0013_drop_alerts_add_first_seen_at.py  0014_url_nullable_embedding_1536.py  0015_add_affiliate_url.py  0016_add_watchlist_context.py  0017_research_agent_schema.py  0018_validation_fields.py  0019_add_deal_score.py  0020_drop_legacy_score_columns.py
dealbot/: affiliates.py  config.py  schemas.py  scorer.py
dealbot/agents/: composition.py  extractor.py  keyword_extractor.py  nl_watchlist.py  orchestrator.py  perception.py  prompts.py  query_gen.py  research.py  scorer.py  state.py  tools.py  tracing.py
dealbot/api/: auth.py  limiter.py  main.py
dealbot/db/: database.py  models.py  rag.py  semantic.py
dealbot/graph/: graph.py  nodes.py  state.py
dealbot/llm/: anthropic.py  base.py  embeddings.py  groq_client.py  ollama.py  openai_client.py  vllm.py
dealbot/ml/: training_data.jsonl
dealbot/scrapers/: amazon.py  base.py  browser_agent.py  browser_session.py  browserbase_session.py  community.py  dom_settlement.py  ebay.py  slickdeals.py  walmart.py
dealwatch/: config.py
frontend/: package-lock.json  package.json
scripts/: generate_training_data.py  run_evals.py  seed_fake_deals.py
tests/: conftest.py  test_alerts.py  test_api.py  test_auth.py  test_concurrent_pipeline.py  test_config.py  test_cors.py  test_digest.py  test_dom_settlement.py  test_graph.py  test_local_playwright_session.py  test_nl_watchlist.py  test_orchestrator.py  test_perception.py  test_scorer.py  test_slickdeals.py  test_tools.py  test_watchlist_filters.py  test_watchlists.py  test_workers.py
(+71 files in other folders)
