[tool.setuptools.packages.find]
include = ["dealbot*"]

[project]
name = "dealbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.0",
    "python-dotenv",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "structlog>=24.0",
    "feedparser>=6.0",
    "celery>=5.3",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "pgvector>=0.3",
    "ollama>=0.2",
    "beautifulsoup4>=4.12",
    "slowapi>=0.1.9",
    "stripe>=8.0",
    "playwright>=1.44",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
